# hs-metagraph

./: .gitignore  hs-metagraph.cabal  shell.nix
res/: test.json  test_new.json  test_rec_new.json
src/: Functions.hs  Main.hs  Types.hs  TypesRec.hs
